[metadata]
name = git-crecord
version = 20201025.0
url = https://github.com/andrewshadura/git-crecord
author = Andrej Shadura
author-email = andrew@shadura.me
description = interactively select chunks to commit with Git
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPL-2+
license_file = COPYING
classifier =
    Development Status :: 4 - Beta
    Environment :: Console :: Curses
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Version Control

[options]
python_requires = >= 3.9
packages = find:
setup_requires =
    docutils >= 0.12
include_package_data = True
tests_require = git-crecord[test]

[options.extras_require]
test =
    pytest >= 6

[tool:pytest]
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE

[options.entry_points]
console_scripts =
    git-crecord = git_crecord.main:main
