[metadata]
name = git-crecord
version = 20220324.0
url = https://github.com/andrewshadura/git-crecord
author = Andrej Shadura
author-email = andrew@shadura.me
description = interactively select chunks to commit with Git
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPL-2+
license_file = COPYING
classifier =
    Development Status :: 4 - Beta
    Environment :: Console :: Curses
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Version Control

[options]
python_requires = >= 3.9
packages = find:
setup_requires =
    docutils >= 0.12
include_package_data = True
tests_require = git-crecord[test]

[options.extras_require]
test =
    pytest >= 6
lint =
    flake8
    flake8-docstrings
    flake8-blind-except
    flake8-builtins
    flake8-isort

[tool:pytest]
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE

[options.entry_points]
console_scripts =
    git-crecord = git_crecord.main:main

[flake8]
doctests = yes
exclude = .*,build,dist,__pycache__
max-line-length = 130
ignore =
    E261,E127,E128,
    W503,W504,
    D300,D400,
    D100,D101,D102,D103,D104,D105,D107,
    D205,D209,
# https://pep8.readthedocs.org/en/latest/intro.html#error-codes
# These were added because PEP-8 allows exceptions, but pep8 doesn't:
# - E261: at least two spaces before inline comment
# - E127: continuation line over-indented for visual indent
# - E128: continuation line under-indented for visual indent
# These were added because PEP-8 is wrong sometimes
# - W503: line break before binary operator
# - W504: line break after binary operator
# We don’t care about docstring formatting that much
# - D300: Use """triple double quotes"""
# - D400 First line should end with a period
# Finally, a lot of things yet don’t have docstrings
# - D100: Missing docstring in public module
# - D101: Missing docstring in public class
# - D102: Missing docstring in public method
# - D103: Missing docstring in public function
# - D104: Missing docstring in public package
# - D105: Missing docstring in magic method
# - D107: Missing docstring in __init__
# - D205 1 blank line required between summary line and description
# - D209 Multi-line docstring closing quotes should be on a separate line
